# Xju

./: README.md
Example/: CMakeLists.txt  main.cpp  main.qml
Example/1/: CMakeLists.txt  build.sh
Example/2/: main.cpp  note.md
Frame/: mainwindow.ui
Frame_Tester/: CMakeLists.txt  main.cpp
Framer/: CMakeLists.txt  mainwindow.ui
Jiami/: About.md  CMakeCache.txt  CMakeLists.txt  Jiami  Makefile  cmake_install.cmake  main.cpp
Puppy/Puppy/ProjectSettings/: ProjectSettings.asset
Winnie/: CMakeLists.txt  RELEASE  dia_settings.cpp  dia_settings.h  dia_settings.ui  gamewin.cpp  gamewin.h  gamewin.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  wsrc.qrc
build-Frame_Tester-Desktop-Debug/: CMakeCache.txt  Frame_Tester  Makefile  cmake_install.cmake  qtcsettings.cmake
build-Frame_Tester-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-Framer-Desktop-Debug/: CMakeCache.txt  Framer  Makefile  cmake_install.cmake  qtcsettings.cmake
build-Framer-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-Winnie-Desktop-Debug/: CMakeCache.txt  Makefile  Winnie  cmake_install.cmake  qtcsettings.cmake
build-Winnie-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-Winnie-Desktop_Qt_5_15_2_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Winnie-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Winnie-Windows-Debug/: CMakeCache.txt  cmake_install.cmake
cardGame/: About.md  CMakeLists.txt  main.cpp
cardGame/doc/: spell.txt
cppl/: 01_datatype.cpp  CMakeLists.txt  main.cpp  mbuild.sh
hpCardGame/: CMakeLists.txt  cmake.txt  lib.cpp  libgame.h  main.cpp
hpCardGame/doc/: main.txt
hpCardGame/开发计划/: duiju.txt  img.md  游戏规划.docx
hpGame/: CMakeLists.txt  main.cpp
(+194 files in other folders)
